# internal/entity/querier.go
@@ -10,19 +10,25 @@ import (
 
 type Querier interface {
 	CreateBarang(ctx context.Context, arg CreateBarangParams) (Barang, error)
+	CreateCompany(ctx context.Context, arg CreateCompanyParams) (Company, error)
 	CreateDepartemen(ctx context.Context, namaDepartemen string) (Departeman, error)
+	CreateHakAkses(ctx context.Context, namaHalaman string) (HakAkse, error)
 	CreateJenisBarang(ctx context.Context, arg CreateJenisBarangParams) (JenisBarang, error)
 	CreateMitra(ctx context.Context, arg CreateMitraParams) (Mitra, error)
 	CreateUser(ctx context.Context, arg CreateUserParams) (CreateUserRow, error)
 	CreateUserAkses(ctx context.Context, arg CreateUserAksesParams) error
 	DeleteBarang(ctx context.Context, idBarang int32) (int64, error)
+	DeleteCompany(ctx context.Context, idCompany int32) (int64, error)
 	DeleteDepartemen(ctx context.Context, idDepartemen int32) (int64, error)
+	DeleteHakAkses(ctx context.Context, idHakAkses int32) (int64, error)
 	DeleteJenisBarang(ctx context.Context, idJenisBarang int32) (int64, error)
 	DeleteMitra(ctx context.Context, idMitra int32) (int64, error)
 	DeleteUser(ctx context.Context, idUser int32) (int64, error)
 	GetBarangByID(ctx context.Context, idBarang int32) (GetBarangByIDRow, error)
 	GetCompany(ctx context.Context) (Company, error)
+	GetCompanyByID(ctx context.Context, idCompany int32) (Company, error)
 	GetDepartemenByID(ctx context.Context, idDepartemen int32) (Departeman, error)
+	GetHakAksesByID(ctx context.Context, idHakAkses int32) (HakAkse, error)
 	GetJenisBarangByID(ctx context.Context, idJenisBarang int32) (JenisBarang, error)
 	GetMitraByID(ctx context.Context, idMitra int32) (Mitra, error)
 	GetUserByID(ctx context.Context, idUser int32) (GetUserByIDRow, error)
@@ -37,6 +43,7 @@ type Querier interface {
 	UpdateBarang(ctx context.Context, arg UpdateBarangParams) (Barang, error)
 	UpdateCompany(ctx context.Context, arg UpdateCompanyParams) (Company, error)
 	UpdateDepartemen(ctx context.Context, arg UpdateDepartemenParams) (Departeman, error)
+	UpdateHakAkses(ctx context.Context, arg UpdateHakAksesParams) (HakAkse, error)
 	UpdateJenisBarang(ctx context.Context, arg UpdateJenisBarangParams) (JenisBarang, error)
 	UpdateMitra(ctx context.Context, arg UpdateMitraParams) (Mitra, error)
 	UpdateUser(ctx context.Context, arg UpdateUserParams) (UpdateUserRow, error)
